data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1168.wast
;; 9. **Test with Dynamic Index Boundaries:**    - Implement a `br_table` with dynamically calculated indices that can swing between valid and invalid due to runtime conditions.      - **Constraint Checked:** Checks real-time index boundary validation under variable conditions.      - **Edge Case Insight:** Ensures dynamic scenarios don’t lead to index errors from real-time value changes.

(assert_invalid
  (module
    (func $dynamic-boundaries
      (local $index i32)
      (block
        (block
          (block
            (block
              (local.set $index (i32.const 3))
              (i32.const 0)
              (br_table 0 1 2 3 (local.get $index))
            )
          )
        )
      )
    )
  )
  "unknown label"
)